Added sidebar elements, needs more styling.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
     </head>
     <body>
         <div id="main">
-            <div class="sidebar"></div>
+            <div class="sidebar">
+                <div class="logo">Dashboard</div>
+                <ul class="side-button-list">
+                    <li class="side-button">Home</li>
+                    <li class="side-button">Profile</li>
+                    <li class="side-button">Messages</li>
+                    <li class="side-button">History</li>
+                    <li class="side-button">Tasks</li>
+                    <li class="side-button">Communities</li>
+                </ul>
+                <ul class="side-button-list">
+                    <li class="side-button">Settings</li>
+                    <li class="side-button">Support</li>
+                    <li class="side-button">Privacy</li>
+                </ul>
+
+            </div>
             <div class="header"></div>
             <div class="content"></div>
         </div>
