set up header grid/

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div id="main">
             <div class="sidebar">
                 <div class="logo">Dashboard</div>
-                <ul class="side-button-list">
+                <ul class="side-button-list links">
                     <li class="side-button">Home</li>
                     <li class="side-button">Profile</li>
                     <li class="side-button">Messages</li>
@@ -17,14 +17,37 @@
                     <li class="side-button">Tasks</li>
                     <li class="side-button">Communities</li>
                 </ul>
-                <ul class="side-button-list">
+                <ul class="side-button-list settings">
                     <li class="side-button">Settings</li>
                     <li class="side-button">Support</li>
                     <li class="side-button">Privacy</li>
                 </ul>
 
             </div>
-            <div class="header"></div>
+            <div class="header">
+                <div class="top-header">
+                    <div class="search-bar">
+                        <div class="search-button"></div>
+                        <div class="search-input"></div>
+                    </div>
+                    <div class="current-user">
+                        <div class="notification"></div>
+                        <div class="user-icon"></div>
+                        <div class="user-name"></div>
+                    </div>
+                </div>
+                <div class="bottom-header">
+                    <div class="user-header">
+                        <div class="user-icon"></div>
+                        <div class="user-greet"></div>
+                    </div>
+                    <div class="header-buttons">
+                        <div class="button-new"></div>
+                        <div class="button-upload"></div>
+                        <div class="button-share"></div>
+                    </div>
+                </div>
+            </div>
             <div class="content"></div>
         </div>
     </body>
