set up grid layout for content cards and right side news section.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,29 @@
                     </div>
                 </div>
             </div>
-            <div class="content"></div>
+            <div class="content">
+                <div class="projects">
+                    <div class="title"></div>
+                    <div class="cards">
+                        <div class="card"></div>
+                        <div class="card"></div>
+                        <div class="card"></div>
+                        <div class="card"></div>
+                        <div class="card"></div>
+                        <div class="card"></div>
+                    </div>
+                </div>
+                <div class="side-content">
+                    <div class="announcements">
+                        <div class="title"></div>
+                        <div class="ann-card"></div>
+                    </div>
+                    <div class="trending">
+                        <div class="title"></div>
+                        <div class="trending-card"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
