--- a/index.html
+++ b/index.html
@@ -8,38 +8,31 @@
     <body>
         <div id="main">
             <div class="sidebar">
-                <a href="">
-                <div class="logo">
-                    
+                <a href=""><div class="logo">
                     <div class="icon">
                         <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                         <path fill="currentColor" d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
                     </svg>
                     </div>
                     <div>Dashboard</div>    
-                </div>
-                </a>
+                </div></a>
                 <ul class="side-button-list links">
-                    <a href="">
-                    <li class="side-button">
+                    <a href=""><li class="side-button">
                         <div class="icon">
                             <svg viewBox="0 0 24 24">
                                 <path fill="currentColor" d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" />
                             </svg>
                         </div>
                         <div>Home</div>
-                    </li>
-                    </a>
-                    <a href="">
-                    <li class="side-button">
+                    </li></a>
+                    <a href=""><li class="side-button">
                         <div class="icon">
                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                                 <path fill="currentColor" d="M22,3H2C0.91,3.04 0.04,3.91 0,5V19C0.04,20.09 0.91,20.96 2,21H22C23.09,20.96 23.96,20.09 24,19V5C23.96,3.91 23.09,3.04 22,3M22,19H2V5H22V19M14,17V15.75C14,14.09 10.66,13.25 9,13.25C7.34,13.25 4,14.09 4,15.75V17H14M9,7A2.5,2.5 0 0,0 6.5,9.5A2.5,2.5 0 0,0 9,12A2.5,2.5 0 0,0 11.5,9.5A2.5,2.5 0 0,0 9,7M14,7V8H20V7H14M14,9V10H20V9H14M14,11V12H18V11H14" />
                             </svg>
                         </div>
                         <div>Profile</div>
-                    </li>
-                    </a>
+                    </li></a>
                     <a href=""><li class="side-button">
                         <div class="icon">
                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
@@ -102,13 +95,23 @@
             <div class="header">
                 <div class="top-header">
                     <div class="search-bar">
-                        <div class="search-button"></div>
-                        <div class="search-input"></div>
+                        <div class="search-button">
+                            <button><svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <path fill="currentColor" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+                            </svg></button>
+                        </div>
+                        <div class="search-input">
+                            <input type="text">
+                        </div>
                     </div>
                     <div class="current-user">
-                        <div class="notification"></div>
+                        <div class="notification">
+                            <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <path fill="currentColor" d="M10,21H14A2,2 0 0,1 12,23A2,2 0 0,1 10,21M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M17,11A5,5 0 0,0 12,6A5,5 0 0,0 7,11V18H17V11M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" />
+                            </svg>
+                        </div>
                         <div class="user-icon"></div>
-                        <div class="user-name"></div>
+                        <div class="user-name">Morgan Oakley</div>
                     </div>
                 </div>
                 <div class="bottom-header">
