Added all html elements, added basic colors and shadows. Needs more styling.

--- a/index.html
+++ b/index.html
@@ -286,11 +286,55 @@
                 <div class="side-content">
                     <div class="announcements">
                         <div class="title">Announcements</div>
-                        <div class="ann-card"></div>
+                        <div class="ann-card">
+                            <div class="ann-1st">
+                                <div class="ann-card-title">Site Maintenance</div>
+                                <div class="ann-card-text">Lorem ipsum dolor sit amet, dicit solet detraxit ex mei, mei ut homero detraxit cotidieque, in eloquentiam liberavisse theophrastus cum.</div>
+                            </div>
+                            <div class="ann-2nd">
+                                <div class="ann-card-title">Community Share Day</div>
+                                <div class="ann-card-text">Lorem ipsum dolor sit amet, dicit solet detraxit ex mei, mei ut homero detraxit cotidieque, in eloquentiam liberavisse theophrastus cum.</div>
+                            </div>
+                            <div class="add-3rd">
+                                <div class="ann-card-title">Updated Privacy</div>
+                                <div class="ann-card-text">Lorem ipsum dolor sit amet, dicit solet detraxit ex mei, mei ut homero detraxit cotidieque, in eloquentiam liberavisse theophrastus cum.</div>
+                            </div>
+                        </div>
                     </div>
                     <div class="trending">
                         <div class="title">Trending</div>
-                        <div class="trending-card"></div>
+                        <div class="trending-card car">
+                            <ul class="trending-list">
+                                <li class="trending-project">
+                                    <div class="icon">
+                                        <img src="img/icon.jpg" alt="">
+                                    </div>
+                                    <div class="user">@tegan</div>
+                                    <div class="project-title">World Peace Builder</div>
+                                </li>
+                                <li class="trending-project">
+                                    <div class="icon">
+                                        <img src="img/icon.jpg" alt="">
+                                    </div>
+                                    <div class="user">@morgan</div>
+                                    <div class="project-title">Super Cool Project</div>
+                                </li>
+                                <li class="trending-project">
+                                    <div class="icon">
+                                        <img src="img/icon.jpg" alt="">
+                                    </div>
+                                    <div class="user">@kendal</div>
+                                    <div class="project-title">Life Changing App</div>
+                                </li>
+                                <li class="trending-project">
+                                    <div class="icon">
+                                        <img src="img/icon.jpg" alt="">
+                                    </div>
+                                    <div class="user">@alex</div>
+                                    <div class="project-title">No Traffic Maker</div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
