Style Announcements section and some of the trending section's parts.

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <div class="accent-column"></div>
                             <div class="card-title">Less Cool Project</div>
                             <div class="card-text">
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. 
                             </div>
                             <div class="card-controls">
                                 <div class="star">
@@ -195,7 +195,7 @@
                             <div class="accent-column"></div>
                             <div class="card-title">Impossible App</div>
                             <div class="card-text">
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
                             </div>
                             <div class="card-controls">
                                 <div class="star">
@@ -218,7 +218,9 @@
                         <div class="card">
                             <div class="accent-column"></div>
                             <div class="card-title">Easy Peasy App</div>
-                            <div class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</div>
+                            <div class="card-text">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+                            </div>
                             <div class="card-controls">
                                 <div class="star">
                                     <svg style="width:24px;height:24px" viewBox="0 0 24 24">
@@ -240,7 +242,9 @@
                         <div class="card">
                             <div class="accent-column"></div>
                             <div class="card-title">Ad Blocker</div>
-                            <div class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</div>
+                            <div class="card-text">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+                            </div>
                             <div class="card-controls">
                                 <div class="star">
                                     <svg style="width:24px;height:24px" viewBox="0 0 24 24">
@@ -262,7 +266,9 @@
                         <div class="card">
                             <div class="accent-column"></div>
                             <div class="card-title">Money Maker</div>
-                            <div class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</div>
+                            <div class="card-text">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+                            </div>
                             <div class="card-controls">
                                 <div class="star">
                                     <svg style="width:24px;height:24px" viewBox="0 0 24 24">
@@ -295,7 +301,7 @@
                                 <div class="ann-card-title">Community Share Day</div>
                                 <div class="ann-card-text">Lorem ipsum dolor sit amet, dicit solet detraxit ex mei, mei ut homero detraxit cotidieque, in eloquentiam liberavisse theophrastus cum.</div>
                             </div>
-                            <div class="add-3rd">
+                            <div class="ann-3rd">
                                 <div class="ann-card-title">Updated Privacy</div>
                                 <div class="ann-card-text">Lorem ipsum dolor sit amet, dicit solet detraxit ex mei, mei ut homero detraxit cotidieque, in eloquentiam liberavisse theophrastus cum.</div>
                             </div>
@@ -303,7 +309,7 @@
                     </div>
                     <div class="trending">
                         <div class="title">Trending</div>
-                        <div class="trending-card car">
+                        <div class="trending-card">
                             <ul class="trending-list">
                                 <li class="trending-project">
                                     <div class="icon">
