--- a/index.html
+++ b/index.html
@@ -295,15 +295,15 @@
                         <div class="ann-card">
                             <div class="ann-1st">
                                 <div class="ann-card-title">Site Maintenance</div>
-                                <div class="ann-card-text">Lorem ipsum dolor sit amet, dicit solet detraxit ex mei, mei ut homero detraxit cotidieque, in eloquentiam liberavisse theophrastus cum.</div>
+                                <div class="ann-card-text">Lorem ipsum dolor sit amet, dicit solet detraxit ex mei, mei ut homero detraxit cotidieque...</div>
                             </div>
                             <div class="ann-2nd">
                                 <div class="ann-card-title">Community Share Day</div>
-                                <div class="ann-card-text">Lorem ipsum dolor sit amet, dicit solet detraxit ex mei, mei ut homero detraxit cotidieque, in eloquentiam liberavisse theophrastus cum.</div>
+                                <div class="ann-card-text">Lorem ipsum dolor sit amet, dicit solet detraxit ex mei, mei ut homero detraxit cotidieque...</div>
                             </div>
                             <div class="ann-3rd">
                                 <div class="ann-card-title">Updated Privacy</div>
-                                <div class="ann-card-text">Lorem ipsum dolor sit amet, dicit solet detraxit ex mei, mei ut homero detraxit cotidieque, in eloquentiam liberavisse theophrastus cum.</div>
+                                <div class="ann-card-text">Lorem ipsum dolor sit amet, dicit solet detraxit ex mei, mei ut homero detraxit cotidieque...</div>
                             </div>
                         </div>
                     </div>
