--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div class="sidebar">
                 <a href=""><div class="logo">
                     <div class="icon">
-                        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                        <svg viewBox="0 0 24 24">
                         <path fill="currentColor" d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
                     </svg>
                     </div>
@@ -113,7 +113,7 @@
                         <div class="user-icon">
                             <img src="img/icon.jpg" alt="">
                         </div>
-                        <div class="user-name">Morgan Oakley</div>
+                        <div class="user-name">Trotsky</div>
                     </div>
                 </div>
                 <div class="bottom-header">
@@ -123,7 +123,7 @@
                         </div>
                         <div class="user-greet">
                             <div class="greet">Hi there,</div>
-                            <div class="user">Morgan Oakley (@morgan)</div>
+                            <div class="user">Trotsky (@trotsky2016)</div>
                         </div>
                     </div>
                     <div class="header-buttons">
@@ -313,7 +313,7 @@
                             <ul class="trending-list">
                                 <li class="trending-project">
                                     <div class="icon">
-                                        <img src="img/icon.jpg" alt="">
+                                        <img src="https://placedog.net/640/480?random" alt="">
                                     </div>
                                     <div class="user">@tegan</div>
                                     <div class="project-title">World Peace Builder</div>
@@ -322,19 +322,19 @@
                                     <div class="icon">
                                         <img src="img/icon.jpg" alt="">
                                     </div>
-                                    <div class="user">@morgan</div>
+                                    <div class="user">@Trotsky2016</div>
                                     <div class="project-title">Super Cool Project</div>
                                 </li>
                                 <li class="trending-project">
                                     <div class="icon">
-                                        <img src="img/icon.jpg" alt="">
+                                        <img src="https://placedog.net/480/480?random" alt="">
                                     </div>
                                     <div class="user">@kendal</div>
                                     <div class="project-title">Life Changing App</div>
                                 </li>
                                 <li class="trending-project">
                                     <div class="icon">
-                                        <img src="img/icon.jpg" alt="">
+                                        <img src="https://placedog.net/600/600?random" alt="">
                                     </div>
                                     <div class="user">@alex</div>
                                     <div class="project-title">No Traffic Maker</div>
